--- a/stylePortfolio.css
+++ b/stylePortfolio.css
@@ -16,8 +16,8 @@ body {
   padding-left: 70px;
 }
 
-.navbar-nav {
-  padding-right: 60px;
+ul li {
+  margin-right: 50px;
   font-size: 20px;
 }
 
@@ -27,5 +27,5 @@ footer {
   color: rgb(214, 211, 211);
   font-size: 20px;
   padding: 30px;
-  margin-top: 38rem;
+  margin-top: 25rem;
 }
