--- a/styleContact.css
+++ b/styleContact.css
@@ -1,66 +1,304 @@
 body {
   background-color: bisque;
+  margin: 0;
+  padding: 0;
+}
+.navbar-expand-lg {
+  padding: 0;
+  margin: 0;
+  widows: 100%;
 }
 
 #navbar-brand {
   color: white;
-  background-color: rgb(97, 194, 194);
-  margin: 0;
-  padding: 15px;
-  color: white;
-  font-size: 30px;
+  background-color: rgb(57, 175, 175);
+  margin-left: 30px;
+  padding: 15px 25px;
   font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 28px;
 }
-.navbar {
+
+.navbar-nav {
   padding: 0;
-  padding-left: 70px;
+  display: inline-block;
 }
 
 ul li {
-  margin-right: 50px;
-  font-size: 20px;
+  display: inline-block;
+  margin: 0;
+  margin-right: 20px;
+  font-size: 18px;
+  padding: 2px 10px;
+}
+ul li:hover {
+  background-color: rgb(57, 175, 175);
+  text-decoration: underline;
+  color: white;
 }
 
-/* The form */
 form {
   background-color: white;
-  width: 60%;
-  margin: 50px;
+  margin: 30px;
   padding: 30px;
+  width: 65%;
 }
-
 form h1 {
-  color: rgb(10, 172, 172);
+  color: rgb(57, 175, 175);
   font-family: Georgia, "Times New Roman", Times, serif;
 }
-
 form label {
-  font-size: 22px;
+  font-size: 18px;
 }
-
 form input {
   width: 100%;
-  height: 40px;
+  padding: 5px;
   font-size: 18px;
   margin-bottom: 25px;
-  padding: 20px;
 }
 
 form button {
-  margin-top: 20px;
-  margin-bottom: 10px;
-  padding: 0.4rem 1.7rem;
-  border: none;
   background-color: rgb(57, 175, 175);
   color: white;
-  font-size: 25px;
+  padding: 5px 28px;
+  font-size: 20px;
+  border: none;
+  margin-top: 10px;
 }
 
 footer {
-  background-color: grey;
+  background-color: gray;
+  padding: 20px;
   text-align: center;
-  color: rgb(214, 211, 211);
   font-size: 20px;
-  padding: 30px;
-  margin-top: 20.15rem;
+  margin-top: 27rem;
+}
+/* //////////////////////////////////////////////////////////////////////////////// */
+@media screen and (max-width: 980px) {
+  .navbar-expand-lg {
+    padding: 0;
+    margin: 0;
+    widows: 100%;
+  }
+
+  #navbar-brand {
+    color: white;
+    background-color: rgb(57, 175, 175);
+    margin-left: 30px;
+    padding: 15px 25px;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-size: 28px;
+  }
+
+  .navbar-nav {
+    padding: 0;
+    display: inline-block;
+  }
+
+  ul li {
+    display: inline-block;
+    margin: 0;
+    margin-right: 20px;
+    font-size: 18px;
+    padding: 2px 10px;
+  }
+  ul li:hover {
+    background-color: rgb(57, 175, 175);
+    text-decoration: underline;
+    color: white;
+  }
+
+  form {
+    background-color: white;
+    margin-left: 45px;
+    margin-top: 40px;
+    padding: 30px;
+    width: 65%;
+  }
+  form h1 {
+    color: rgb(57, 175, 175);
+    font-family: Georgia, "Times New Roman", Times, serif;
+  }
+  form label {
+    font-size: 18px;
+  }
+  form input {
+    width: 100%;
+    padding: 5px;
+    font-size: 18px;
+    margin-bottom: 25px;
+  }
+
+  form button {
+    background-color: rgb(57, 175, 175);
+    color: white;
+    padding: 5px 28px;
+    font-size: 20px;
+    border: none;
+    margin-top: 10px;
+  }
+
+  footer {
+    background-color: gray;
+    padding: 20px;
+    text-align: center;
+    font-size: 20px;
+    margin-top: 27rem;
+  }
+}
+/* ////////////////////////////////////////////////////////////////////////////////// */
+@media screen and (max-width: 768px) {
+  .navbar-expand-lg {
+    width: 100%;
+    margin: 0;
+    padding: 0px;
+  }
+
+  #navbar-brand {
+    color: white;
+    background-color: rgb(51, 168, 168);
+    margin: 0;
+    padding: 15px 25px;
+    font-size: 28px;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    margin-left: 22px;
+  }
+
+  .navbar-nav {
+    display: inline-block;
+    padding: 0;
+  }
+
+  ul li {
+    font-size: 18px;
+    margin-right: 20px;
+    padding: 2px 10px;
+    display: inline-block;
+  }
+  ul li:hover {
+    background-color: rgb(57, 175, 175);
+    text-decoration: underline;
+    color: white;
+  }
+
+  /* The form */
+  form {
+    background-color: white;
+    width: 94%;
+    margin: 3%;
+    padding: 4%;
+  }
+
+  form h1 {
+    color: rgb(10, 172, 172);
+    font-family: Georgia, "Times New Roman", Times, serif;
+  }
+
+  form label {
+    font-size: 18px;
+  }
+
+  form input {
+    width: 100%;
+    font-size: 18px;
+    margin-bottom: 25px;
+    padding: 5px;
+  }
+
+  form button {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 5px 28px;
+    border: none;
+    background-color: rgb(57, 175, 175);
+    color: white;
+    font-size: 20px;
+  }
+
+  footer {
+    background-color: grey;
+    text-align: center;
+    color: rgb(214, 211, 211);
+    font-size: 20px;
+    padding: 30px;
+    margin-top: 20.15rem;
+  }
+}
+/* ///////////////////////////////////////////////////////////////////////////// */
+@media screen and (max-width: 640px) {
+  .navbar-expand-lg {
+    width: 100%;
+    margin: 0;
+    /* padding: 0px; */
+  }
+
+  #navbar-brand {
+    width: 100%;
+    color: white;
+    background-color: rgb(51, 168, 168);
+    margin: 0;
+    padding: 20px;
+    font-size: 30px;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    text-align: center;
+  }
+  .navbar-nav {
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+  }
+
+  ul li {
+    font-size: 18px;
+    padding: 1% 3%;
+    margin: 0;
+    display: inline-block;
+  }
+  ul li:hover {
+    background-color: rgb(57, 175, 175);
+    text-decoration: underline;
+    color: white;
+  }
+
+  /* The form */
+  form {
+    background-color: white;
+    width: 90%;
+    margin: 5%;
+    padding: 5%;
+  }
+
+  form h1 {
+    color: rgb(10, 172, 172);
+    font-family: Georgia, "Times New Roman", Times, serif;
+  }
+
+  form label {
+    font-size: 18px;
+  }
+
+  form input {
+    width: 100%;
+    font-size: 18px;
+    margin-bottom: 25px;
+    padding: 5px;
+  }
+
+  form button {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 5px 28px;
+    border: none;
+    background-color: rgb(57, 175, 175);
+    color: white;
+    font-size: 20px;
+  }
+
+  footer {
+    background-color: grey;
+    text-align: center;
+    color: rgb(214, 211, 211);
+    font-size: 20px;
+    padding: 30px;
+    margin-top: 21rem;
+  }
 }
