--- a/style.css
+++ b/style.css
@@ -1,30 +1,25 @@
 body {
   background-color: bisque;
-  margin: 0;
-  padding: 0;
 }
+
 .navbar-expand-lg {
   width: 100%;
   margin: 0;
-  padding: 0px;
+  padding: 0;
 }
 
 #navbar-brand {
   color: white;
-  background-color: rgb(51, 168, 168);
-  padding: 15px;
-  font-size: 30px;
+  background-color: rgb(57, 175, 175);
+  padding: 15px 25px;
+  font-size: 28px;
   font-family: Georgia, "Times New Roman", Times, serif;
   margin-left: 30px;
-  /* width: 30%; */
-  /* float: left; */
 }
 
 .navbar-nav {
   display: inline-block;
   padding: 0;
-  /* width: 70%; */
-  text-align: right;
   float: right;
 }
 
@@ -33,7 +28,12 @@ ul li {
   margin-right: 20px;
   padding: 2px 10px;
   display: inline-block;
-  /* text-align: center; */
+  text-align: center;
+}
+ul li:hover {
+  background-color: rgb(57, 175, 175);
+  text-decoration: underline;
+  color: white;
 }
 
 /* The section */
