--- a/styleContact.css
+++ b/styleContact.css
@@ -1,34 +1,34 @@
 body {
   background-color: bisque;
-  margin: 0;
-  padding: 0;
 }
+
 .navbar-expand-lg {
-  padding: 0;
+  width: 100%;
   margin: 0;
-  widows: 100%;
+  padding: 0;
 }
 
 #navbar-brand {
   color: white;
   background-color: rgb(57, 175, 175);
-  margin-left: 30px;
   padding: 15px 25px;
-  font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 28px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  margin-left: 30px;
 }
 
 .navbar-nav {
-  padding: 0;
   display: inline-block;
+  padding: 0;
+  float: right;
 }
 
 ul li {
-  display: inline-block;
-  margin: 0;
-  margin-right: 20px;
   font-size: 18px;
+  margin-right: 20px;
   padding: 2px 10px;
+  display: inline-block;
+  text-align: center;
 }
 ul li:hover {
   background-color: rgb(57, 175, 175);
