--- a/styleContact.css
+++ b/styleContact.css
@@ -1,7 +1,10 @@
 body {
   background-color: bisque;
+  margin: 0;
+  margin: 0;
 }
 
+/* The header */
 .navbar-expand-lg {
   width: 100%;
   margin: 0;
@@ -36,10 +39,12 @@ ul li:hover {
   color: white;
 }
 
+/* The form */
 form {
   background-color: white;
-  margin: 30px;
-  padding: 30px;
+  margin-left: 30px;
+  margin-top: 40px;
+  padding: 25px;
   width: 65%;
 }
 form h1 {
@@ -56,6 +61,10 @@ form input {
   margin-bottom: 25px;
 }
 
+#textstuff {
+  min-width: 100%;
+}
+
 form button {
   background-color: rgb(57, 175, 175);
   color: white;
@@ -63,80 +72,19 @@ form button {
   font-size: 20px;
   border: none;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
-
+/* The footer */
 footer {
   background-color: gray;
   padding: 20px;
   text-align: center;
   font-size: 20px;
-  margin-top: 27rem;
+  margin-top: 24rem;
 }
 /* //////////////////////////////////////////////////////////////////////////////// */
 @media screen and (max-width: 980px) {
-  .navbar-expand-lg {
-    padding: 0;
-    margin: 0;
-    widows: 100%;
-  }
-
-  #navbar-brand {
-    color: white;
-    background-color: rgb(57, 175, 175);
-    margin-left: 30px;
-    padding: 15px 25px;
-    font-family: Georgia, "Times New Roman", Times, serif;
-    font-size: 28px;
-  }
-
-  .navbar-nav {
-    padding: 0;
-    display: inline-block;
-  }
-
-  ul li {
-    display: inline-block;
-    margin: 0;
-    margin-right: 20px;
-    font-size: 18px;
-    padding: 2px 10px;
-  }
-  ul li:hover {
-    background-color: rgb(57, 175, 175);
-    text-decoration: underline;
-    color: white;
-  }
-
-  form {
-    background-color: white;
-    margin-left: 45px;
-    margin-top: 40px;
-    padding: 30px;
-    width: 65%;
-  }
-  form h1 {
-    color: rgb(57, 175, 175);
-    font-family: Georgia, "Times New Roman", Times, serif;
-  }
-  form label {
-    font-size: 18px;
-  }
-  form input {
-    width: 100%;
-    padding: 5px;
-    font-size: 18px;
-    margin-bottom: 25px;
-  }
-
-  form button {
-    background-color: rgb(57, 175, 175);
-    color: white;
-    padding: 5px 28px;
-    font-size: 20px;
-    border: none;
-    margin-top: 10px;
-  }
-
+  /* The footer */
   footer {
     background-color: gray;
     padding: 20px;
@@ -147,73 +95,16 @@ footer {
 }
 /* ////////////////////////////////////////////////////////////////////////////////// */
 @media screen and (max-width: 768px) {
-  .navbar-expand-lg {
-    width: 100%;
-    margin: 0;
-    padding: 0px;
-  }
-
-  #navbar-brand {
-    color: white;
-    background-color: rgb(51, 168, 168);
-    margin: 0;
-    padding: 15px 25px;
-    font-size: 28px;
-    font-family: Georgia, "Times New Roman", Times, serif;
-    margin-left: 22px;
-  }
-
-  .navbar-nav {
-    display: inline-block;
-    padding: 0;
-  }
-
-  ul li {
-    font-size: 18px;
-    margin-right: 20px;
-    padding: 2px 10px;
-    display: inline-block;
-  }
-  ul li:hover {
-    background-color: rgb(57, 175, 175);
-    text-decoration: underline;
-    color: white;
-  }
-
   /* The form */
   form {
     background-color: white;
-    width: 94%;
-    margin: 3%;
-    padding: 4%;
+    margin-left: 30px;
+    margin-top: 40px;
+    padding: 25px;
+    width: 91%;
   }
 
-  form h1 {
-    color: rgb(10, 172, 172);
-    font-family: Georgia, "Times New Roman", Times, serif;
-  }
-
-  form label {
-    font-size: 18px;
-  }
-
-  form input {
-    width: 100%;
-    font-size: 18px;
-    margin-bottom: 25px;
-    padding: 5px;
-  }
-
-  form button {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 5px 28px;
-    border: none;
-    background-color: rgb(57, 175, 175);
-    color: white;
-    font-size: 20px;
-  }
-
+  /* The footer */
   footer {
     background-color: grey;
     text-align: center;
@@ -225,16 +116,11 @@ footer {
 }
 /* ///////////////////////////////////////////////////////////////////////////// */
 @media screen and (max-width: 640px) {
-  .navbar-expand-lg {
-    width: 100%;
-    margin: 0;
-    /* padding: 0px; */
-  }
-
+  /* The header */
   #navbar-brand {
     width: 100%;
     color: white;
-    background-color: rgb(51, 168, 168);
+    background-color: rgb(57, 175, 175);
     margin: 0;
     padding: 20px;
     font-size: 30px;
@@ -247,18 +133,6 @@ footer {
     text-align: center;
   }
 
-  ul li {
-    font-size: 18px;
-    padding: 1% 3%;
-    margin: 0;
-    display: inline-block;
-  }
-  ul li:hover {
-    background-color: rgb(57, 175, 175);
-    text-decoration: underline;
-    color: white;
-  }
-
   /* The form */
   form {
     background-color: white;
@@ -267,32 +141,7 @@ footer {
     padding: 5%;
   }
 
-  form h1 {
-    color: rgb(10, 172, 172);
-    font-family: Georgia, "Times New Roman", Times, serif;
-  }
-
-  form label {
-    font-size: 18px;
-  }
-
-  form input {
-    width: 100%;
-    font-size: 18px;
-    margin-bottom: 25px;
-    padding: 5px;
-  }
-
-  form button {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 5px 28px;
-    border: none;
-    background-color: rgb(57, 175, 175);
-    color: white;
-    font-size: 20px;
-  }
-
+  /* The footer */
   footer {
     background-color: grey;
     text-align: center;
