--- a/stylePortfolio.css
+++ b/stylePortfolio.css
@@ -5,6 +5,7 @@ body {
   background-color: bisque;
 }
 
+/* The header */
 .navbar-expand-lg {
   width: 100%;
   margin: 0;
@@ -33,22 +34,46 @@ ul li {
   display: inline-block;
   text-align: center;
 }
+
 ul li:hover {
   background-color: rgb(57, 175, 175);
   text-decoration: underline;
   color: white;
 }
 
-#portfolio {
+/* The section */
+#portfolio2 {
   background-color: white;
-  width: 60%;
-  margin: 35px;
+  margin-left: 30px;
+  margin-top: 40px;
   padding: 25px;
+  width: 65%;
 }
 
-h1 {
+#portfolio2 h1 {
+  color: rgb(57, 175, 175);
   font-family: Georgia, "Times New Roman", Times, serif;
-  color: rgb(51, 168, 168);
+}
+
+.row {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+#coll {
+  position: relative;
+}
+
+.pm {
+  background-color: rgb(57, 175, 175);
+  position: absolute;
+  bottom: 10px;
+  text-align: center;
+  height: 40px;
+  color: white;
+  font-size: 20px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  padding: 5px;
+  width: 88%;
 }
 
 img {
@@ -56,79 +81,19 @@ img {
   height: 100%;
 }
 
-.row {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
 footer {
-  clear: both;
+  /* clear: both; */
   background-color: grey;
   text-align: center;
   color: rgb(214, 211, 211);
   font-size: 20px;
   padding: 30px;
-  margin-top: 14rem;
+  margin-top: 29rem;
 }
+
 /* ///////////////////////////////////////////////////////////////////// */
 
 @media screen and (max-width: 980px) {
-  body {
-    width: 100%;
-    padding: 0;
-    margin: 0;
-  }
-
-  .navbar-expand-lg {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-  }
-
-  #navbar-brand {
-    color: white;
-    background-color: rgb(57, 175, 175);
-    padding: 15px 25px;
-    font-size: 28px;
-    font-family: Georgia, "Times New Roman", Times, serif;
-    margin-left: 30px;
-  }
-
-  .navbar-nav {
-    display: inline-block;
-    padding: 0;
-    float: right;
-  }
-
-  ul li {
-    font-size: 18px;
-    margin-right: 20px;
-    padding: 2px 10px;
-    display: inline-block;
-    text-align: center;
-  }
-  ul li:hover {
-    background-color: rgb(57, 175, 175);
-    text-decoration: underline;
-    color: white;
-  }
-
-  #portfolio {
-    background-color: white;
-    width: 60%;
-    margin: 35px;
-    padding: 25px;
-  }
-
-  h1 {
-    font-family: Georgia, "Times New Roman", Times, serif;
-    color: rgb(51, 168, 168);
-  }
-
-  img {
-    width: 100%;
-    height: 100%;
-  }
-
   .row {
     margin-top: 20px;
     margin-bottom: 20px;
@@ -146,67 +111,30 @@ footer {
 
 /* //////////////////////////////////////////////////////////////////////// */
 @media screen and (max-width: 768px) {
-  body {
-    width: 100%;
-    padding: 0;
-    margin: 0;
-  }
-
-  .navbar-expand-lg {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-  }
-
-  #navbar-brand {
-    color: white;
-    background-color: rgb(51, 168, 168);
-    padding: 15px 25px;
-    font-size: 28px;
-    font-family: Georgia, "Times New Roman", Times, serif;
-    margin-left: 22px;
-  }
-
-  /* the nav bar list */
-  .navbar-nav {
-    display: inline-block;
-    padding: 0;
-    margin: 0;
-  }
-
-  ul li {
-    font-size: 18px;
-    margin-right: 20px;
-    padding: 2px 10px;
-    display: inline-block;
-    text-align: center;
-  }
-  ul li:hover {
-    color: white;
-    background-color: rgb(57, 175, 175);
-    text-decoration: underline;
-  }
-
-  #portfolio {
+  #portfolio2 {
+    width: 91%;
+    margin-left: 30px;
+    margin-top: 40px;
     background-color: white;
-    width: 100%;
-    margin: 35px;
     padding: 25px;
-  }
-
-  h1 {
-    font-family: Georgia, "Times New Roman", Times, serif;
-    color: rgb(51, 168, 168);
-  }
-
-  img {
-    width: 100%;
-    height: 100%;
   }
 
   .row {
     margin-top: 20px;
     margin-bottom: 20px;
+  }
+
+  .pm {
+    background-color: rgb(57, 175, 175);
+    position: absolute;
+    bottom: 10px;
+    text-align: center;
+    height: 40px;
+    color: white;
+    font-size: 20px;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    padding: 5px;
+    width: 90%;
   }
 
   footer {
@@ -222,15 +150,10 @@ footer {
 /* //////////////////////////////////////////////////////////////////////////////// */
 
 @media screen and (max-width: 640px) {
-  .navbar-expand-lg {
-    padding: 0;
-    width: 100%;
-  }
-
   #navbar-brand {
     color: white;
     width: 100%;
-    background-color: rgb(51, 168, 168);
+    background-color: rgb(57, 175, 175);
     margin: 0;
     padding: 20px;
     font-size: 30px;
@@ -244,44 +167,36 @@ footer {
     text-align: center;
   }
 
-  ul li {
-    font-size: 18px;
-    padding: 1% 3%;
-    margin: 0;
-    display: inline-block;
+  #portfolio2 {
+    width: 90%;
+    margin: 5%;
+    background-color: white;
+    padding: 5%;
   }
-
-  ul li:hover {
-    background-color: rgb(57, 175, 175);
-    text-decoration: underline;
-    color: white;
-  }
-
-  #portfolio {
-    width: 92%;
-    margin: 20px;
-  }
-
-  .row {
-    margin: 0;
-  }
-
   img {
     padding-top: 15px;
     padding-bottom: 15px;
+    width: 100%;
+  }
+  .pm {
+    background-color: rgb(57, 175, 175);
+    position: absolute;
+    bottom: 40px;
+    text-align: center;
+    height: 40px;
+    color: white;
+    font-size: 20px;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    padding: 5px;
+    width: 93%;
   }
 
-  /* .col-md-6 {
-    margin: 4%;
-  } */
-
   footer {
-    clear: both;
     background-color: grey;
     text-align: center;
     color: rgb(214, 211, 211);
     font-size: 20px;
     padding: 30px;
-    margin-top: 29rem;
+    margin-top: 12rem;
   }
 }
