--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body {
   display: inline-block;
   margin: 0;
   padding: 0;
-  float: right;
 }
 
 ul li {
@@ -41,12 +40,22 @@ ul li:hover {
 }
 
 /* The section */
+section#section {
+  overflow: auto;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .aboutMe {
   background-color: white;
   margin-left: 30px;
   margin-top: 40px;
   padding: 25px;
   width: 65%;
+  height: auto;
+ float: left;
 }
 
 .aboutMe h1 {
@@ -59,8 +68,31 @@ img {
   width: 210px;
   float: left;
   margin-right: 3%;
-  margin-bottom: 2%;
+  margin-bottom: 1%;
 }
+
+
+.socialDiv {
+  display: flex;
+  flex-direction: column;
+  font-size:30px;
+  background-color: #fff;
+  padding: 0.5%;
+  border-radius: 15px;
+}
+.fa-github{
+  color: black;
+}
+.fa-linkedin{
+  color: #0e76a8 ;
+}
+.fa-envelope{
+  color: #B23121;
+}
+.fa-facebook-square{
+  color: #3b5998 ;
+}
+
 /* The footer */
 footer {
   background-color: grey;
@@ -68,11 +100,13 @@ footer {
   color: rgb(214, 211, 211);
   font-size: 20px;
   padding: 30px;
-  margin-top: 32rem;
+  /* margin-top: 52rem; */
 }
 /* //////////////////////////////////////////////////////////////////////////// */
 /* screen (max-width:980px) */
 @media screen and (max-width: 980px) {
+
+  
   /* footer */
   footer {
     background-color: grey;
@@ -80,21 +114,42 @@ footer {
     color: rgb(214, 211, 211);
     font-size: 20px;
     padding: 30px;
-    margin-top: 29rem;
+    /* margin-top: 29rem; */
   }
 }
 /* //////////////////////////////////////////////////////////////////////////// */
 /* screen (max-width: 768px) */
 @media screen and (max-width: 768px) {
+  section#section {
+    overflow: auto;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  
   /* The section */
   .aboutMe {
-    width: 91%;
-    margin-left: 30px;
+    width: 90%;
+    margin-left: 0;
     margin-top: 40px;
     background-color: white;
     padding: 25px;
   }
 
+  .socialDiv {
+    margin-top: 2%;
+    display: flex;
+    flex-direction: row;
+    width: 200px;
+    justify-content: space-evenly;
+    font-size:30px;
+    background-color: #fff;
+    padding: 0.5%;
+    border-radius: 15px;
+  }
   /* The footer */
   footer {
     background-color: grey;
@@ -102,7 +157,7 @@ footer {
     color: rgb(214, 211, 211);
     font-size: 20px;
     padding: 30px;
-    margin-top: 33.3rem;
+    /* margin-top: 33.3rem; */
   }
 }
 
@@ -135,11 +190,16 @@ footer {
     margin: 5%;
     background-color: white;
     padding: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   img {
-    height: 100%;
-    width: 100%;
+    height: 60%;
+    width: 60%;
+    margin-bottom: 3%;
   }
   .p1 {
     clear: both;
